Fix tool tip z-index, workitem 18279

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/TeamSchedule.css
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/TeamSchedule.css
@@ -59,7 +59,7 @@
 .teamschedule-agents {
 	width: 100%;
 	position: relative;
-	z-index: 10;
+	z-index: 699;
 }
 .teamschedule-agent 
 {
